--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "src": "index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "handle": "@vercel/node" },
     {
-      "src": "/api/(.*)",
-      "dest": "/$1"
+      "src": "/api/student/(.*)",
+      "dest": "/api/student/$1"
     },
     {
       "src": ".*",
